--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ header nav ul li a{
     background-image: url(../img/coworking_vista_aerea.jpg);
     background-size: cover;
     height: 100vh;
+    background-position: center; 
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -75,7 +77,7 @@ header nav ul li a{
 .pie_de_pagina_pr { display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 15%;
+    padding: 0px 15%;
     }
 
 /* hoja proyectos ------------------------------------------------------------------------------------------------------------- */ 
@@ -179,13 +181,56 @@ padding-bottom: 20px;
 .contacto section{
     display: flex;
     justify-content: space-evenly;
-
    }
     .contacto h2{
         padding: 25px;
         text-align: center;
     }
 
-
 /* Media Querys -----------------------------------------------------------------------------------------------------------------------------------*/
-/*!!*asdasdasdasdasdas  
+
+@media screen and (max-width:1440px) {
+
+/* hoja proyectos ------------------------------------------------------------------------------------------------------------------------------- */ 
+    
+    .proyectos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid: auto rows 500px;
+        gap: 20px;
+        }
+}  
+
+@media screen and (max-widh: 994px) {
+    .fondo header img{ width: 10px;
+        height: 10px;
+    }
+    
+}
+
+    @media screen and (max-width: 500px){
+
+        /* hoja proyectos ------------------------------------------------------------------------------------------------------------------------------- */ 
+
+        .proyectos div p{
+            display: none;
+        }
+
+        /* footer otras páginas --------------------------------------------------------------------------------------*/
+.pie_de_pagina_pr a img{ width: px;
+}
+.pie_de_pagina_pr h2{
+    font-size: 20px;
+}
+.pie_de_pagina_pr p{
+    font-size: 8px;}
+    }
+
+    @media screen and (max-width: 980px){
+
+    .fondo header img{ width: 80px;
+        height: 80px;
+    }
+    }
+
+
