--- a/css/style.css
+++ b/css/style.css
@@ -200,13 +200,18 @@ padding-bottom: 20px;
         gap: 20px;
         }
 }  
+@media screen and (max-width: 980px){
 
-@media screen and (max-widh: 994px) {
-    .fondo header img{ width: 10px;
-        height: 10px;
+    .fondo header img{ width: 80px;
+        height: 80px;
     }
-    
-}
+    .proyectos {
+        display: grid;
+        grid-template-columns:auto;
+        grid: auto rows 500px;
+        gap: 10px;
+        }
+    }
 
     @media screen and (max-width: 500px){
 
@@ -225,12 +230,3 @@ padding-bottom: 20px;
 .pie_de_pagina_pr p{
     font-size: 8px;}
     }
-
-    @media screen and (max-width: 980px){
-
-    .fondo header img{ width: 80px;
-        height: 80px;
-    }
-    }
-
-
